--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.10.0",
     "@sweetalert2/themes": "^5.0.26",
     "@tailwindcss/vite": "^4.0.3",
     "axios": "^1.7.9",
+    "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.1.5",
     "sweetalert2": "^11.15.10",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
